src/main/java/com/example/geoserver/error/ExistedException.java
package com.example.geoserver.error;public class ExistedException {
}
